js/js.translator/testData/incremental/invalidation/eagerInitializationMoveBetweenFiles/lib1/eagerB.1.kt
@OptIn(kotlin.ExperimentalStdlibApi::class)
@EagerInitialization
val marker = run { z2 = true; 2 }
